[package]
name = "origin_check"
version = "0.1.1"
authors = ["Ben Weinstein-Raun <b@w-r.me>"]
edition = "2021"
description = "Tower middleware that checks the Origin and Referer, as a minimal CSRF mitigation"
license = "CC0-1.0 OR Apache-2.0"

[dependencies]
cidr = "0.2"
http = "1"
pin-project = "1"
tower = "0.4"
tower-layer = { version = "0.3", optional = true }

[features]
default = ["tower-layer"]
